--- a/Sample/MainWindow.xaml
+++ b/Sample/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="AlfaRobot.ARobotScript.Sample.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="448" Width="736" MinHeight="350" MinWidth="525">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
@@ -9,7 +9,9 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBox x:Name="scriptBox" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" AcceptsTab="True">@AlfaScript</TextBox>
+        <TextBox x:Name="scriptBox" VerticalScrollBarVisibility="Visible" AcceptsReturn="True" AcceptsTab="True">
+            @AlfaScript
+        </TextBox>
         <GridSplitter Grid.Row="1" Height="3"></GridSplitter>
         <TextBox x:Name="logBox" Grid.Row="2" VerticalScrollBarVisibility="Visible"></TextBox>
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
